--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,14 @@
     ],
 
     "require": {
-        "php": ">=5.4"
+        "php":                          ">=5.4",
+        "symfony/config":               "~2.5,<2.7.0",
+        "symfony/dependency-injection": "~2.5,<2.7.0",
+        "symfony/http-kernel":          "~2.5,<2.7.0"
+    },
+
+    "suggest": {
+        "symfony/symfony": "Allows more advanced functionality with full Symfony package"
     },
 
     "autoload": {
