--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     ],
 
     "require": {
-        "php":                          ">=5.4",
-        "symfony/config":               "~2.5,<2.8",
-        "symfony/dependency-injection": "~2.5,<2.8",
-        "symfony/http-kernel":          "~2.5,<2.8"
+        "php":                          "~5.6",
+        "symfony/config":               "~2.5,<2.9",
+        "symfony/dependency-injection": "~2.5,<2.9",
+        "symfony/http-kernel":          "~2.5,<2.9"
     },
 
     "suggest": {
