--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name":        "adrenalinkin/entity-helper-bundle",
     "description": "This bundle provides help for the work with entities which managed by Doctrine",
     "type":        "symfony-bundle",
-    "keywords":    ["doctrine", "entity", "helper", "symfony", "bundle"],
+    "keywords":    ["doctrine", "entity-helper", "symfony-bundle"],
     "license":     "MIT",
 
     "authors": [
@@ -17,9 +17,9 @@
         "doctrine/common":              "~2.4",
         "doctrine/orm":                 "~2.4",
         "php":                          "~5.6||~7.0",
-        "symfony/config":               "~2.5",
-        "symfony/dependency-injection": "~2.5",
-        "symfony/http-kernel":          "~2.5"
+        "symfony/config":               "~2.5||~3.0",
+        "symfony/dependency-injection": "~2.5||~3.0",
+        "symfony/http-kernel":          "~2.5||~3.0"
     },
 
     "suggest": {
